...
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="time_placeholder" translatable="false">--</string>
    <string name="time_separator" translatable="false">:</string>
    <!--Insurance Filter string -->
    <string name="ivr_range">IDV Range </string>
    <string name="zero_check_string">Zero Depreciation Cover</string>
    <string name="consumables">Consumables</string>
    <string name="engine_protection">Engine Protection</string>
    <string name="deductible_string">Voluntary Deductible </string>

    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="deleted_key"><xliff:g example="4" id="key">%1$s</xliff:g> deleted</string>
...
    <string name="regplace" translatable="false">Reg Place</string>
    <string name="dealerNum" translatable="false">Dealer Number</string>
    <string name="dealerPrice" translatable="false">Dealr Price</string>
    <string name="regnum" translatable="false">Reg Num</string>
    <string name="price" translatable="false">Price</string>
    <string name="version" translatable="false">Version*</string>
    <string name="next" translatable="false">Next</string>
    <string name="view_lead" traslatable="false">View Lead</string>
    <string name="ad_stock_submit" translatable="false" traslatable="false">Add Stock</string>
    <string name="search_by_name_number" translatable="false">Enter Name or Number</string>
    <string name="emptyString"></string>
    <string name="network_error" translatable="false">No Internet connection</string>
    <string name="checkConnection" translatable="false">Please check your internet connection</string>
...
    <string name="maruti" translatable="false">Maruti</string>
    <string name="hyundai" translatable="false">Hyundai</string>
    <string name="honda" translatable="false">Honda</string>
    <string name="toyota" translatable="false">Toyota</string>
    <string name="tata" translatable="false">Tata</string>
    <string name="mahindra" translatable="false">Mahindra</string>
    <string name="ford" translatable="false">Ford</string>
    <string name="chevrolet" translatable="false">Chevrolet</string>
    <string name="audi" translatable="false">Audi</string>
    <string name="volkswagen" translatable="false">Volkswagen</string>
    <string name="bmw" translatable="false">BMW</string>
    <string name="renault" translatable="false">Renault</string>
    <string name="mercedes" translatable="false">Mercedes</string>
    <string name="nissan" translatable="false">Nissan</string>
...
    <string name="new_case">New Case</string>

    <string name="even">Even</string>
    <string name="odd">Odd</string>

    <!--Loan offers strings-->
    <string name="reg_no">Registration Number*</string>
    <string name="rsa">Road Side Assistance (RSA)</string>
    <string name="title_activity_issue_policy">Issue Policy</string>
    <string name="registrationNumber">Reg. No. - %1$s</string>

    <string name="error_customer_name_required">Customer Name is required</string>
    <string name="error_customer_name_invalid">Customer name should be 3 or more characters long</string>
...
        <item>Ms.</item>
        <item>Dr.</item>
        <item>Mrs.</item>
    </string-array>

    <string-array name="array_occupation">
        <item>Self Employed</item>
        <item>Service</item>
        <item>Agri/Farmer/Land Holding</item>
        <item>Home Maker</item>
        <item>Retired</item>
        <item>Other</item>
    </string-array>


    <string-array name="array_nominee_relation">
        <item>Father</item>
        <item>Mother</item>
        <item>Spouse</item>
        <item>Son</item>
        <item>Daughter</item>
        <item>Sibling</item>
        <item>Guardian</item>
    </string-array>

    <string-array name="array_income">
        <item>3 Lacs</item>
        <item>5-7 Lacs</item>
        <item>7-10 Lacs</item>
        <item>10-15 Lacs</item>
        <item>15 Lacs+</item>
    </string-array>

...
   &#8226; Cost incurred for vehicle insurance is not included\n
   &#8226; Value for aftermarket accessories is not accounted</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_seller_leads_detail_page">SellerLeadsDetailPageActivity</string>
    <string name="title_activity_filter">Filter</string>
    <string name="string_doj">Date of Joining</string>
    <string name="prompt_select_residence_type">Select Residence Type</string>
    <string name="uploaded_thanks_msg">THANKS\nFOR CHOOSING US.</string>
    <string name="uploaded_thanks_msg2">A bank representative will get in \n touch with you shortly.</string>
    <string name="title_activity_dealer_platform_filter">DealerPlatformFilterActivity</string>
    <string name="inr">\u20B9 %1$s</string>
...
