...
              android:layout_height="match_parent"
              android:layout_margin="5dp"
              android:gravity="center_vertical"
              android:orientation="horizontal">

              <ImageView
                  android:id="@+id/stockImage"
                  android:layout_width="100dp"
                  android:layout_height="100dp"
                  android:layout_centerVertical="true"
                  android:contentDescription="@string/emptyString"
                  android:scaleType="fitCenter"
                  android:src="@drawable/gcloud_placeholder"/>
...
                          style="@style/textStyleHeading"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_centerVertical="true"

                          android:gravity="center"
                          android:text="Petrol"


                          android:textColor="@color/insurance_middle_gray"
                          android:textStyle="normal"
                          />

...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="gone"/>

      <!--  <ProgressBar
...
