...
                    android:layout_marginLeft="-4dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textColorHint="@color/grey">

                    <com.gcloud.gaadi.ui.customviews.CustomCalender
                        android:id="@+id/policyStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:editable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
...
                    android:textSize="@dimen/insurance_text_size"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="@dimen/insurance_floating_label_textSize"
                    app:met_primaryColor="@color/material_text" />-->

                <com.rengwuxian.materialedittext.MaterialTextView
                    android:id="@+id/policyEndDateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clickable="false"
                    android:editable="false"
                    android:hint="@string/string_previous_end_date"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <com.rengwuxian.materialedittext.MaterialTextView
                        android:id="@+id/tv_regDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/reg_date_for_inspctd_cars"
                        android:inputType="textCapWords"
                        android:padding="5dp"
...
